// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/File Uploader After Selecting 1`] = `
<section>
  

  <div
    class="fd-form-item"
  >
    
  
    <div
      class="fd-file-uploader"
    >
      
    
      <label
        class="fd-file-uploader__hidden"
        for="browse_input1"
      >
        File upload
      </label>
      
    
      <input
        autocomplete="off"
        class="fd-input fd-file-uploader__input"
        id="browse_input1"
        onclick="browseFile('input1');"
        readonly=""
        title="document.pdf"
        type="text"
        value="document.pdf"
      />
      
    
      <button
        aria-label="Select a file for uploading"
        class="fd-button"
        id="file-uploader-button-1"
        onclick="browseFile('input1');"
      >
        Browse...
    
      </button>
      
  
    </div>
    
  
    <div
      aria-atomic="true"
      aria-live="polite"
      class="fd-file-uploader__hidden"
    >
      document.pdf
    </div>
    
  
    <input
      class="fd-file-uploader__hidden"
      id="input1"
      onchange="selectFile(this,'browse_input1')"
      type="file"
    />
    

  </div>
  


  <br />
  

  <br />
  

  <br />
  


  <div
    dir="rtl"
  >
    
  
    <h3>
      RTL Support
    </h3>
    
  
    <div
      class="fd-form-item"
    >
      
    
      <div
        class="fd-file-uploader"
      >
        
      
        <label
          class="fd-file-uploader__hidden"
          for="browse_input1-rtl"
        >
          File upload
        </label>
        
      
        <input
          autocomplete="off"
          class="fd-input fd-file-uploader__input"
          id="browse_input1-rtl"
          onclick="browseFile('input1');"
          readonly=""
          title="document.pdf"
          type="text"
          value="document.pdf"
        />
        
      
        <button
          aria-label="Select a file for uploading"
          class="fd-button"
          id="file-uploader-button-2"
          onclick="browseFile('input1');"
        >
          Browse...
      
        </button>
        
    
      </div>
      
    
      <div
        aria-atomic="true"
        aria-live="polite"
        class="fd-file-uploader__hidden"
      >
        document.pdf
      </div>
      
    
      <input
        class="fd-file-uploader__hidden"
        id="input1-rtl"
        onchange="selectFile(this,'browse_input1-rtl')"
        type="file"
      />
      
  
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/File Uploader Compact 1`] = `
<section>
  

  <div
    class="fd-form-item"
  >
    
  
    <div
      class="fd-file-uploader"
    >
      
    
      <label
        class="fd-file-uploader__hidden"
        for="browse_input2"
      >
        File upload
      </label>
      
    
      <input
        autocomplete="off"
        class="fd-input fd-input--compact fd-file-uploader__input"
        id="browse_input2"
        onclick="browseFile('input2');"
        placeholder="Choose a file for upload"
        readonly=""
        title="Choose a file for upload"
        type="text"
      />
      
    
      <button
        aria-label="Select a file for uploading"
        class="fd-button fd-button--compact fd-file-uploader__button"
        id="file-uploader-button-3"
        onclick="browseFile('input2');"
      >
        Browse...
    
      </button>
      
  
    </div>
    
  
    <div
      aria-atomic="true"
      aria-live="polite"
      class="fd-file-uploader__hidden"
    />
    
  
    <input
      class="fd-file-uploader__hidden"
      id="input2"
      onchange="selectFile(this,'browse_input2')"
      type="file"
    />
    

  </div>
  


  <br />
  

  <br />
  

  <br />
  


  <div
    dir="rtl"
  >
    
  
    <h3>
      RTL Support
    </h3>
    
  
    <div
      class="fd-form-item"
    >
      
    
      <div
        class="fd-file-uploader"
      >
        
      
        <label
          class="fd-file-uploader__hidden"
          for="browse_input2"
        >
          File upload
        </label>
        
      
        <input
          autocomplete="off"
          class="fd-input fd-input--compact fd-file-uploader__input"
          id="browse_input2-rtl"
          onclick="browseFile('input2-rtl');"
          placeholder="Choose a file for upload to localserver"
          readonly=""
          title="Choose a file for upload to localserver"
          type="text"
        />
        
      
        <button
          aria-label="Select a file for uploading"
          class="fd-button fd-button--compact fd-file-uploader__button"
          id="file-uploader-button-4"
          onclick="browseFile('input2-rtl');"
        >
          Browse...
      
        </button>
        
    
      </div>
      
    
      <div
        aria-atomic="true"
        aria-live="polite"
        class="fd-file-uploader__hidden"
      />
      
    
      <input
        class="fd-file-uploader__hidden"
        id="input2-rtl"
        onchange="selectFile(this,'browse_input2-rtl')"
        type="file"
      />
      
  
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/File Uploader Default 1`] = `
<section>
  

  <div
    class="fd-form-item"
  >
    
  
    <div
      class="fd-file-uploader"
    >
      
    
      <label
        class="fd-file-uploader__hidden"
        for="browse_input1"
      >
        File upload
      </label>
      
    
      <input
        autocomplete="off"
        class="fd-input fd-file-uploader__input"
        id="browse_input1"
        onclick="browseFile('input1');"
        placeholder="Choose a file for upload"
        readonly=""
        title="Choose a file for upload"
        type="text"
      />
      
    
      <button
        aria-label="Select a file for uploading"
        class="fd-button"
        id="file-uploader-button-1"
        onclick="browseFile('input1');"
      >
        Browse...
    
      </button>
      
  
    </div>
    
  
    <div
      aria-atomic="true"
      aria-live="polite"
      class="fd-file-uploader__hidden"
    />
    
  
    <input
      class="fd-file-uploader__hidden"
      id="input1"
      onchange="selectFile(this,'browse_input1')"
      type="file"
    />
    

  </div>
  


  <br />
  

  <br />
  

  <br />
  


  <div
    dir="rtl"
  >
    
  
    <h3>
      RTL Support
    </h3>
    
  
    <div
      class="fd-form-item"
    >
      
    
      <div
        class="fd-file-uploader"
      >
        
      
        <label
          class="fd-file-uploader__hidden"
          for="browse_input1-rtl"
        >
          File upload
        </label>
        
      
        <input
          autocomplete="off"
          class="fd-input fd-file-uploader__input"
          id="browse_input1-rtl"
          onclick="browseFile('input1');"
          placeholder="Choose a file for upload"
          readonly=""
          title="Choose a file for upload"
          type="text"
        />
        
      
        <button
          aria-label="Select a file for uploading"
          class="fd-button"
          id="file-uploader-button-2"
          onclick="browseFile('input1');"
        >
          Browse...
      
        </button>
        
    
      </div>
      
    
      <div
        aria-atomic="true"
        aria-live="polite"
        class="fd-file-uploader__hidden"
      />
      
    
      <input
        class="fd-file-uploader__hidden"
        id="input1-rtl"
        onchange="selectFile(this,'browse_input1-rtl')"
        type="file"
      />
      
  
    </div>
    

  </div>
  

</section>
`;
